pkg/lang/testdata/ub/config/invalid/state-encryption-bad-key-source-value.ub
state: { @backend: local, encryption: { @key-source: 'env-key' } }
